WindowsForms_MoPhongKhoanNoMin/WindowsForms_MoPhongKhoanNoMin/LiteCAD/API/Litecad.h

HANDLE LCAPI lcPlineGetPrevVer  (HANDLE hPline, HANDLE hVer);
HANDLE LCAPI lcPlineGetVer      (HANDLE hPline, int Index);
HANDLE LCAPI lcPlineGetVerPt    (HANDLE hPline, double X, double Y, double Delta);
HANDLE LCAPI lcPlineGetSeg      (HANDLE hPline, double X, double Y, double Delta);
BOOL   LCAPI lcPlineReverse     (HANDLE hPline);
BOOL   LCAPI lcPlineSimple      (HANDLE hPline, BOOL bSimple, int nLines);
int    LCAPI lcPlineContainPoint(HANDLE hPline, double X, double Y);
BOOL   LCAPI lcPlineGetRoundPrm (HANDLE hPline, HANDLE hVer, double* px0, double* py0, double* pBulge, double* px1, double* py1);   // undoc (dwg plugin)
// Mline Vertices
HANDLE LCAPI lcMlineAddVer      (HANDLE hMline, HANDLE hVer, double X, double Y);
HANDLE LCAPI lcMlineAddVerDir   (HANDLE hMline, HANDLE hVer, double Ang, double Length);
BOOL   LCAPI lcMlineDeleteVer   (HANDLE hMline, HANDLE hVer);
HANDLE LCAPI lcMlineGetFirstVer (HANDLE hMline);
HANDLE LCAPI lcMlineGetNextVer  (HANDLE hMline, HANDLE hVer);
HANDLE LCAPI lcMlineGetLastVer  (HANDLE hMline);
HANDLE LCAPI lcMlineGetPrevVer  (HANDLE hMline, HANDLE hVer);
HANDLE LCAPI lcMlineGetVer      (HANDLE hMline, int Index);
HANDLE LCAPI lcMlineGetVerPt    (HANDLE hMline, double X, double Y, double Delta);
HANDLE LCAPI lcMlineGetSeg      (HANDLE hMline, double X, double Y, double Delta);   // undoc
BOOL   LCAPI lcMlineReverse     (HANDLE hMline);
// RPlan functions
HANDLE LCAPI lcRPlanAddVer      (HANDLE hRPlan, double X, double Y);
BOOL   LCAPI lcRPlanSetCurve    (HANDLE hVer, double Radius, double LenClot1, double LenClot2);
BOOL   LCAPI lcRPlanSetPos      (HANDLE hVer, double X, double Y);
BOOL   LCAPI lcRPlanDeleteVer   (HANDLE hRPlan, HANDLE hVer);
HANDLE LCAPI lcRPlanGetFirstVer (HANDLE hRPlan);
HANDLE LCAPI lcRPlanGetNextVer  (HANDLE hRPlan, HANDLE hVer);
HANDLE LCAPI lcRPlanGetLastVer  (HANDLE hRPlan);
HANDLE LCAPI lcRPlanGetPrevVer  (HANDLE hRPlan, HANDLE hVer);
HANDLE LCAPI lcRPlanGetVer      (HANDLE hRPlan, int Index);
BOOL   LCAPI lcRPlanGetPoint    (HANDLE hRPlan, double Dist, double* pX, double* pY, double* pAngle, int* pSide);
BOOL   LCAPI lcRPlanGetDist     (HANDLE hRPlan, double X, double Y, double* pX2, double* pY2, double* pDist, double* pOffset);
// Viewport
BOOL   LCAPI lcVportSetView     (HANDLE hVport, double Xcen, double Ycen, double Scal, double Angle);
BOOL   LCAPI lcVportFrolClear   (HANDLE hVport);
BOOL   LCAPI lcVportFrolAdd     (HANDLE hVport, HANDLE hLayer);
HANDLE LCAPI lcVportFrolGet     (HANDLE hVport, int iLayer);
BOOL   LCAPI lcVportIsFrol      (HANDLE hVport, HANDLE hLayer);
// Block attribute
HANDLE LCAPI lcBlkRefAddAtt      (HANDLE hBlockRef, LPCWSTR szTag, LPCWSTR szValue);    // undoc
HANDLE LCAPI lcBlkRefGetFirstAtt (HANDLE hBlockRef);
HANDLE LCAPI lcBlkRefGetNextAtt  (HANDLE hBlockRef, HANDLE hAttrib);
HANDLE LCAPI lcBlkRefGetAtt      (HANDLE hBlockRef, LPCWSTR szTag);
// Hatch
BOOL   LCAPI lcHatchSetPattern   (HANDLE hHatch, LPCWSTR szFileName, LPCWSTR szPatName, double Scal, double Angle);
BOOL   LCAPI lcHatchBoundStart   (HANDLE hHatch);
BOOL   LCAPI lcHatchBoundPoint   (HANDLE hHatch, double X, double Y);
BOOL   LCAPI lcHatchBoundEndLoop (HANDLE hHatch);
 
BOOL   LCAPI lcHatchBoundEnd     (HANDLE hHatch);
 
BOOL   LCAPI lcHatchPatStart     (HANDLE hHatch);
 
BOOL   LCAPI lcHatchPatLine      (HANDLE hHatch, double Angle, double x0, double y0, double dx, double dy, int nDash, double L0, double L1, double L2, double L3, double L4, double L5, double L6, double L7);
BOOL   LCAPI lcHatchPatEnd       (HANDLE hHatch);
int    LCAPI lcHatchGetLoopSize  (HANDLE hHatch, int iLoop);
BOOL   LCAPI lcHatchGetPoint     (HANDLE hHatch, int iPnt, double* pX, double* pY);
// Rectangle
int    LCAPI lcRectGetPolyline   (HANDLE hRect, double* pX, double* pY, double* pBulge);
// Construction line
BOOL   LCAPI lcXlinePutDir  (HANDLE hXline, double X, double Y);
// TIN object
BOOL   LCAPI lcTinClear          (HANDLE hTin, BOOL bOnlyTrians);
BOOL   LCAPI lcTinLoad           (HANDLE hTin, LPCWSTR szFileName, BOOL bEmbed);
BOOL   LCAPI lcTinSave           (HANDLE hTin, LPCWSTR szFileName, BOOL bOverwriteExist);
HANDLE LCAPI lcTinAddPtype       (HANDLE hTin, LPCWSTR szName, LPCWSTR szNotes, int Color);
HANDLE LCAPI lcTinAddPoint       (HANDLE hTin, HANDLE hPtype, double X, double Y, double Z);
HANDLE LCAPI lcTinAddTrian       (HANDLE hTin, HANDLE hPt0, HANDLE hPt1, HANDLE hPt2);
BOOL   LCAPI lcTinNormalize      (HANDLE hTin);
BOOL   LCAPI lcTinGetZ           (HANDLE hTin, double X, double Y, double* pZ);
int    LCAPI lcTinInterLine      (HANDLE hTin, double X0, double Y0, double X1, double Y1);
BOOL   LCAPI lcTinInterGetPoint  (HANDLE hTin, int iPnt, double* pX, double* pY, double* pZ);
BOOL   LCAPI lcTinDelPtype       (HANDLE hTin, HANDLE hPtype);
BOOL   LCAPI lcTinDelPoint       (HANDLE hTin, HANDLE hPoint);
BOOL   LCAPI lcTinDelTrian       (HANDLE hTin, HANDLE hTrian);
HANDLE LCAPI lcTinPtypeGetFirst  (HANDLE hTin);
HANDLE LCAPI lcTinPtypeGetNext   (HANDLE hTin, HANDLE hPtype);
HANDLE LCAPI lcTinPtypeGetByName (HANDLE hTin, LPCWSTR szName);
BOOL   LCAPI lcTinPtypeDialog    (HANDLE hTin, HWND hWnd, BOOL bReadOnly);
HANDLE LCAPI lcTinPointGetFirst  (HANDLE hTin);
HANDLE LCAPI lcTinPointGetNext   (HANDLE hTin, HANDLE hPoint);
HANDLE LCAPI lcTinPointGetByPos  (HANDLE hTin, double X, double Y, double Delta);
HANDLE LCAPI lcTinTrianGetFirst  (HANDLE hTin);
HANDLE LCAPI lcTinTrianGetNext   (HANDLE hTin, HANDLE hTrian);
HANDLE LCAPI lcTinTrianGetByPos  (HANDLE hTin, double X, double Y);
// Design window
HANDLE LCAPI lcCreateWindow      (HWND  hWndParent, int Style, int Left, int Top, int Width, int Height);
BOOL   LCAPI lcDeleteWindow      (HANDLE hLcWnd);
BOOL   LCAPI lcWndResize         (HANDLE hLcWnd, int Left, int Top, int Width, int Height);
BOOL   LCAPI lcWndSelectView     (HANDLE hLcWnd, HANDLE hView);
BOOL   LCAPI lcWndZoomRect       (HANDLE hLcWnd, double Left, double Bottom, double Right, double Top);
BOOL   LCAPI lcWndZoomScale      (HANDLE hLcWnd, double Scal);
BOOL   LCAPI lcWndZoomMove       (HANDLE hLcWnd, double DX, double DY);
BOOL   LCAPI lcWndRedraw         (HANDLE hLcWnd);
BOOL   LCAPI lcWndSetFocus       (HANDLE hLcWnd);
BOOL   LCAPI lcWndExeCommand     (HANDLE hLcWnd, int Command, int CmdParam);
BOOL   LCAPI lcWndCoordFromDrw   (HANDLE hLcWnd, double Xdrw, double Ydrw, int* pXwin, int* pYwin);
BOOL   LCAPI lcWndCoordToDrw     (HANDLE hLcWnd, int Xwin, int Ywin, double* pXdrw, double* pYdrw);
BOOL   LCAPI lcWndGetCursorCoord (HANDLE hLcWnd, int* pXwin, int* pYwin, double* pXdrw, double* pYdrw);
HANDLE LCAPI lcWndGetEntByPoint  (HANDLE hLcWnd, int Xwin, int Ywin);
BOOL   LCAPI lcWndSetCmdwin      (HANDLE hLcWnd, HANDLE hCmdLine);
BOOL   LCAPI lcWndSetPropwin     (HANDLE hLcWnd, HANDLE hPropWnd);
BOOL   LCAPI lcWndStopCommand    (HANDLE hLcWnd);    // undoc (instead of lcWndOnClose)
BOOL   LCAPI lcWndGetPoint       (HANDLE hLcWnd, LPCWSTR szPrompt, int SnapMode, int Index, double* pX, double* pY);
BOOL   LCAPI lcWndGetPointBuf    (HANDLE hLcWnd, int Index, double* pX, double* pY);
// Coordinate convertions
BOOL   LCAPI lcCoordDrwToWnd     (HANDLE hLcWnd, double Xdrw, double Ydrw, int* pXwin, int* pYwin);
BOOL   LCAPI lcCoordWndToDrw     (HANDLE hLcWnd, int Xwin, int Ywin, double* pXdrw, double* pYdrw);
// Color from string
BOOL   LCAPI lcColorIsRGB      (LPCWSTR szColor);
int    LCAPI lcColorGetRed     (LPCWSTR szColor);
 
int    LCAPI lcColorGetGreen   (LPCWSTR szColor);
int    LCAPI lcColorGetBlue    (LPCWSTR szColor);
int    LCAPI lcColorGetIndex   (LPCWSTR szColor);
BOOL   LCAPI lcColorToVal      (LPCWSTR szColor, int* pbRGB, int* pIndex, int* pR,int* pG,int* pB);
// Color palette
BOOL   LCAPI lcColorSetPalette (int Index, int R,int G,int B);
BOOL   LCAPI lcColorGetPalette (int Index, int* pR,int* pG,int* pB);
// Command Window
HANDLE LCAPI lcCreateCmdwin    (HWND hWndParent, int Left, int Top, int Width, int Height);