WindowsForms_MoPhongKhoanNoMin/WindowsForms_MoPhongKhoanNoMin/LiteCAD/API/Litecad.pas

Function lcPlineGetPrevVer (hPline: Integer; hVer: Integer): Integer; stdcall; external 'litecad.dll';
Function lcPlineGetVer (hPline: Integer; Index: Integer): Integer; stdcall; external 'litecad.dll';
Function lcPlineGetVerPt (hPline: Integer; X: Double; Y: Double; Delta: Double): Integer; stdcall; external 'litecad.dll';
Function lcPlineGetSeg (hPline: Integer; X: Double; Y: Double; Delta: Double): Integer; stdcall; external 'litecad.dll';
Function lcPlineReverse (hPline: Integer): Integer; stdcall; external 'litecad.dll';
Function lcPlineSimple (hPline: Integer; bSimple: Integer; nLines: Integer): Integer; stdcall; external 'litecad.dll';
Function lcPlineContainPoint (hPline: Integer; X: Double; Y: Double): Integer; stdcall; external 'litecad.dll';
Function lcPlineGetRoundPrm (hPline: Integer; hVer: Integer; px0: Pdouble; py0: Pdouble; pBulge: Pdouble; px1: Pdouble; py1: Pdouble): Integer; stdcall; external 'litecad.dll';
Function lcMlineAddVer (hMline: Integer; hVer: Integer; X: Double; Y: Double): Integer; stdcall; external 'litecad.dll';
Function lcMlineAddVerDir (hMline: Integer; hVer: Integer; Ang: Double; Length: Double): Integer; stdcall; external 'litecad.dll';
Function lcMlineDeleteVer (hMline: Integer; hVer: Integer): Integer; stdcall; external 'litecad.dll';
Function lcMlineGetFirstVer (hMline: Integer): Integer; stdcall; external 'litecad.dll';
Function lcMlineGetNextVer (hMline: Integer; hVer: Integer): Integer; stdcall; external 'litecad.dll';
Function lcMlineGetLastVer (hMline: Integer): Integer; stdcall; external 'litecad.dll';
Function lcMlineGetPrevVer (hMline: Integer; hVer: Integer): Integer; stdcall; external 'litecad.dll';
Function lcMlineGetVer (hMline: Integer; Index: Integer): Integer; stdcall; external 'litecad.dll';
Function lcMlineGetVerPt (hMline: Integer; X: Double; Y: Double; Delta: Double): Integer; stdcall; external 'litecad.dll';
Function lcMlineGetSeg (hMline: Integer; X: Double; Y: Double; Delta: Double): Integer; stdcall; external 'litecad.dll';
Function lcMlineReverse (hMline: Integer): Integer; stdcall; external 'litecad.dll';
Function lcRPlanAddVer (hRPlan: Integer; X: Double; Y: Double): Integer; stdcall; external 'litecad.dll';
Function lcRPlanSetCurve (hVer: Integer; Radius: Double; LenClot1: Double; LenClot2: Double): Integer; stdcall; external 'litecad.dll';
Function lcRPlanSetPos (hVer: Integer; X: Double; Y: Double): Integer; stdcall; external 'litecad.dll';
Function lcRPlanDeleteVer (hRPlan: Integer; hVer: Integer): Integer; stdcall; external 'litecad.dll';
Function lcRPlanGetFirstVer (hRPlan: Integer): Integer; stdcall; external 'litecad.dll';
Function lcRPlanGetNextVer (hRPlan: Integer; hVer: Integer): Integer; stdcall; external 'litecad.dll';
Function lcRPlanGetLastVer (hRPlan: Integer): Integer; stdcall; external 'litecad.dll';
Function lcRPlanGetPrevVer (hRPlan: Integer; hVer: Integer): Integer; stdcall; external 'litecad.dll';
Function lcRPlanGetVer (hRPlan: Integer; Index: Integer): Integer; stdcall; external 'litecad.dll';
Function lcRPlanGetPoint (hRPlan: Integer; Dist: Double; pX: Pdouble; pY: Pdouble; pAngle: Pdouble; pSide: Pinteger): Integer; stdcall; external 'litecad.dll';
Function lcRPlanGetDist (hRPlan: Integer; X: Double; Y: Double; pX2: Pdouble; pY2: Pdouble; pDist: Pdouble; pOffset: Pdouble): Integer; stdcall; external 'litecad.dll';
Function lcVportSetView (hVport: Integer; Xcen: Double; Ycen: Double; Scal: Double; Angle: Double): Integer; stdcall; external 'litecad.dll';
Function lcVportFrolClear (hVport: Integer): Integer; stdcall; external 'litecad.dll';
Function lcVportFrolAdd (hVport: Integer; hLayer: Integer): Integer; stdcall; external 'litecad.dll';
Function lcVportFrolGet (hVport: Integer; iLayer: Integer): Integer; stdcall; external 'litecad.dll';
Function lcVportIsFrol (hVport: Integer; hLayer: Integer): Integer; stdcall; external 'litecad.dll';
Function lcBlkRefAddAtt (hBlockRef: Integer; szTag: PWideChar; szValue: PWideChar): Integer; stdcall; external 'litecad.dll';
Function lcBlkRefGetFirstAtt (hBlockRef: Integer): Integer; stdcall; external 'litecad.dll';
Function lcBlkRefGetNextAtt (hBlockRef: Integer; hAttrib: Integer): Integer; stdcall; external 'litecad.dll';
Function lcBlkRefGetAtt (hBlockRef: Integer; szTag: PWideChar): Integer; stdcall; external 'litecad.dll';
Function lcHatchSetPattern (hHatch: Integer; szFileName: PWideChar; szPatName: PWideChar; Scal: Double; Angle: Double): Integer; stdcall; external 'litecad.dll';
Function lcHatchBoundStart (hHatch: Integer): Integer; stdcall; external 'litecad.dll';
Function lcHatchBoundPoint (hHatch: Integer; X: Double; Y: Double): Integer; stdcall; external 'litecad.dll';
Function lcHatchBoundEndLoop (hHatch: Integer): Integer; stdcall; external 'litecad.dll';
Function lcHatchBoundEnd (hHatch: Integer): Integer; stdcall; external 'litecad.dll';
Function lcHatchPatStart (hHatch: Integer): Integer; stdcall; external 'litecad.dll';
Function lcHatchPatLine (hHatch: Integer; Angle: Double; x0: Double; y0: Double; dx: Double; dy: Double; nDash: Integer; L0: Double; L1: Double; L2: Double; L3: Double; L4: Double; L5: Double; L6: Double; L7: Double): Integer; stdcall; external 'litecad.dll';
Function lcHatchPatEnd (hHatch: Integer): Integer; stdcall; external 'litecad.dll';
Function lcHatchGetLoopSize (hHatch: Integer; iLoop: Integer): Integer; stdcall; external 'litecad.dll';
Function lcHatchGetPoint (hHatch: Integer; iPnt: Integer; pX: Pdouble; pY: Pdouble): Integer; stdcall; external 'litecad.dll';
Function lcRectGetPolyline (hRect: Integer; pX: Pdouble; pY: Pdouble; pBulge: Pdouble): Integer; stdcall; external 'litecad.dll';
Function lcXlinePutDir (hXline: Integer; X: Double; Y: Double): Integer; stdcall; external 'litecad.dll';
Function lcTinClear (hTin: Integer; bOnlyTrians: Integer): Integer; stdcall; external 'litecad.dll';
Function lcTinLoad (hTin: Integer; szFileName: PWideChar; bEmbed: Integer): Integer; stdcall; external 'litecad.dll';
Function lcTinSave (hTin: Integer; szFileName: PWideChar; bOverwriteExist: Integer): Integer; stdcall; external 'litecad.dll';
Function lcTinAddPtype (hTin: Integer; szName: PWideChar; szNotes: PWideChar; Color: Integer): Integer; stdcall; external 'litecad.dll';
Function lcTinAddPoint (hTin: Integer; hPtype: Integer; X: Double; Y: Double; Z: Double): Integer; stdcall; external 'litecad.dll';
Function lcTinAddTrian (hTin: Integer; hPt0: Integer; hPt1: Integer; hPt2: Integer): Integer; stdcall; external 'litecad.dll';
Function lcTinNormalize (hTin: Integer): Integer; stdcall; external 'litecad.dll';
Function lcTinGetZ (hTin: Integer; X: Double; Y: Double; pZ: Pdouble): Integer; stdcall; external 'litecad.dll';
Function lcTinInterLine (hTin: Integer; X0: Double; Y0: Double; X1: Double; Y1: Double): Integer; stdcall; external 'litecad.dll';
Function lcTinInterGetPoint (hTin: Integer; iPnt: Integer; pX: Pdouble; pY: Pdouble; pZ: Pdouble): Integer; stdcall; external 'litecad.dll';
Function lcTinDelPtype (hTin: Integer; hPtype: Integer): Integer; stdcall; external 'litecad.dll';
Function lcTinDelPoint (hTin: Integer; hPoint: Integer): Integer; stdcall; external 'litecad.dll';
Function lcTinDelTrian (hTin: Integer; hTrian: Integer): Integer; stdcall; external 'litecad.dll';
Function lcTinPtypeGetFirst (hTin: Integer): Integer; stdcall; external 'litecad.dll';
Function lcTinPtypeGetNext (hTin: Integer; hPtype: Integer): Integer; stdcall; external 'litecad.dll';
Function lcTinPtypeGetByName (hTin: Integer; szName: PWideChar): Integer; stdcall; external 'litecad.dll';
Function lcTinPtypeDialog (hTin: Integer; hWnd: HWND; bReadOnly: Integer): Integer; stdcall; external 'litecad.dll';
Function lcTinPointGetFirst (hTin: Integer): Integer; stdcall; external 'litecad.dll';
Function lcTinPointGetNext (hTin: Integer; hPoint: Integer): Integer; stdcall; external 'litecad.dll';
Function lcTinPointGetByPos (hTin: Integer; X: Double; Y: Double; Delta: Double): Integer; stdcall; external 'litecad.dll';
Function lcTinTrianGetFirst (hTin: Integer): Integer; stdcall; external 'litecad.dll';
Function lcTinTrianGetNext (hTin: Integer; hTrian: Integer): Integer; stdcall; external 'litecad.dll';
Function lcTinTrianGetByPos (hTin: Integer; X: Double; Y: Double): Integer; stdcall; external 'litecad.dll';
Function lcCreateWindow (hWndParent: HWND; Style: Integer; Left: Integer; Top: Integer; Width: Integer; Height: Integer): Integer; stdcall; external 'litecad.dll';
Function lcDeleteWindow (hLcWnd: Integer): Integer; stdcall; external 'litecad.dll';
Function lcWndResize (hLcWnd: Integer; Left: Integer; Top: Integer; Width: Integer; Height: Integer): Integer; stdcall; external 'litecad.dll';
Function lcWndSelectView (hLcWnd: Integer; hView: Integer): Integer; stdcall; external 'litecad.dll';
Function lcWndZoomRect (hLcWnd: Integer; Left: Double; Bottom: Double; Right: Double; Top: Double): Integer; stdcall; external 'litecad.dll';
Function lcWndZoomScale (hLcWnd: Integer; Scal: Double): Integer; stdcall; external 'litecad.dll';
Function lcWndZoomMove (hLcWnd: Integer; DX: Double; DY: Double): Integer; stdcall; external 'litecad.dll';
Function lcWndRedraw (hLcWnd: Integer): Integer; stdcall; external 'litecad.dll';
Function lcWndSetFocus (hLcWnd: Integer): Integer; stdcall; external 'litecad.dll';
Function lcWndExeCommand (hLcWnd: Integer; Command: Integer; CmdParam: Integer): Integer; stdcall; external 'litecad.dll';
Function lcWndCoordFromDrw (hLcWnd: Integer; Xdrw: Double; Ydrw: Double; pXwin: Pinteger; pYwin: Pinteger): Integer; stdcall; external 'litecad.dll';
Function lcWndCoordToDrw (hLcWnd: Integer; Xwin: Integer; Ywin: Integer; pXdrw: Pdouble; pYdrw: Pdouble): Integer; stdcall; external 'litecad.dll';
Function lcWndGetCursorCoord (hLcWnd: Integer; pXwin: Pinteger; pYwin: Pinteger; pXdrw: Pdouble; pYdrw: Pdouble): Integer; stdcall; external 'litecad.dll';
Function lcWndGetEntByPoint (hLcWnd: Integer; Xwin: Integer; Ywin: Integer): Integer; stdcall; external 'litecad.dll';
Function lcWndSetCmdwin (hLcWnd: Integer; hCmdLine: Integer): Integer; stdcall; external 'litecad.dll';
Function lcWndSetPropwin (hLcWnd: Integer; hPropWnd: Integer): Integer; stdcall; external 'litecad.dll';
Function lcWndStopCommand (hLcWnd: Integer): Integer; stdcall; external 'litecad.dll';
Function lcWndGetPoint (hLcWnd: Integer; szPrompt: PWideChar; SnapMode: Integer; Index: Integer; pX: Pdouble; pY: Pdouble): Integer; stdcall; external 'litecad.dll';
Function lcWndGetPointBuf (hLcWnd: Integer; Index: Integer; pX: Pdouble; pY: Pdouble): Integer; stdcall; external 'litecad.dll';
Function lcCoordDrwToWnd (hLcWnd: Integer; Xdrw: Double; Ydrw: Double; pXwin: Pinteger; pYwin: Pinteger): Integer; stdcall; external 'litecad.dll';
Function lcCoordWndToDrw (hLcWnd: Integer; Xwin: Integer; Ywin: Integer; pXdrw: Pdouble; pYdrw: Pdouble): Integer; stdcall; external 'litecad.dll';
Function lcColorIsRGB (szColor: PWideChar): Integer; stdcall; external 'litecad.dll';
Function lcColorGetRed (szColor: PWideChar): Integer; stdcall; external 'litecad.dll';
Function lcColorGetGreen (szColor: PWideChar): Integer; stdcall; external 'litecad.dll';
Function lcColorGetBlue (szColor: PWideChar): Integer; stdcall; external 'litecad.dll';
Function lcColorGetIndex (szColor: PWideChar): Integer; stdcall; external 'litecad.dll';
Function lcColorToVal (szColor: PWideChar; pbRGB: Pinteger; pIndex: Pinteger; pR: Pinteger; pG: Pinteger; pB: Pinteger): Integer; stdcall; external 'litecad.dll';
Function lcColorSetPalette (Index: Integer; R: Integer; G: Integer; B: Integer): Integer; stdcall; external 'litecad.dll';
Function lcColorGetPalette (Index: Integer; pR: Pinteger; pG: Pinteger; pB: Pinteger): Integer; stdcall; external 'litecad.dll';
Function lcCreateCmdwin (hWndParent: HWND; Left: Integer; Top: Integer; Width: Integer; Height: Integer): Integer; stdcall; external 'litecad.dll';
